--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
   "require": {
     "beta/bx.otel.base": "dev-develop"
   },
+  "autoload": {
+    "classmap": ["lib/"]
+  },
   "version": "0.0.1",
   "require-dev": {
     "php": ">=8.1"
