--- a/composer.json
+++ b/composer.json
@@ -8,18 +8,17 @@
     }
   ],
   "require": {
-    "beta/bx.otel.base": "*"
+    "beta/otel.base": "^1.0"
   },
   "autoload": {
     "classmap": ["lib/"]
   },
-  "version": "0.0.1",
   "require-dev": {
     "php": ">=8.1"
   },
   "repositories": [
     {
-      "url": "https://github.com/beta-eto-code/bx.otel.base",
+      "url": "https://github.com/beta-eto-code/otel.base",
       "type": "git"
     }
   ],
