--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     }
   ],
   "require": {
-    "beta/otel.base": "^1.0"
+    "beta/bx.otel": "^1.0"
   },
   "autoload": {
     "classmap": ["lib/"]
@@ -18,7 +18,7 @@
   },
   "repositories": [
     {
-      "url": "https://github.com/beta-eto-code/otel.base",
+      "url": "https://github.com/beta-eto-code/bx.otel",
       "type": "git"
     }
   ],
