--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,11 @@
     }
   ],
   "require": {
-    "beta/bx.otel": "dev-develop"
+    "beta/bx.otel": "^1.0",
+    "php": ">=8.1"
   },
   "autoload": {
     "classmap": ["lib/"]
-  },
-  "require-dev": {
-    "php": ">=8.1"
   },
   "repositories": [
     {
