fix(deps): update deps in composer.json

--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,12 @@
   },
   "repositories": [
     {
-      "url": "https://github.com/beta-eto-code/bx.otel",
-      "type": "git"
+      "url": "git@github.com:beta-eto-code/bx.otel.git",
+      "type": "vcs"
     },
     {
-      "url": "https://github.com/beta-eto-code/otel.base",
-      "type": "git"
+      "url": "git@github.com:beta-eto-code/otel.base.git",
+      "type": "vcs"
     }
   ],
   "config": {
